[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Textures/Clock/Clock.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/Clock/Clock hand.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Game/Clock.gd" type="Script" id=3]

[node name="Clock" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
script = ExtResource( 3 )

[node name="ClockSprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="ClockHandSprite" type="Sprite" parent="ClockSprite"]
unique_name_in_owner = true
texture = ExtResource( 2 )
offset = Vector2( 0, -40 )

[node name="TenSecondsTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0
autostart = true

[connection signal="timeout" from="TenSecondsTimer" to="." method="_on_TenSecondsTimer_timeout"]
